# evget

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  conanfile.py  justfile  mouse-movement-recorder.cpp  sanitizers.just  utils.cmake  vcpkg.json  windows.just
CommandLine/: CMakeLists.txt
CommandLine/include/CommandLine/: AbstractOption.h  Option.h
CommandLine/src/: OptionFlag.cpp  Parser.cpp
CommandLine/test/: CommandLineOptionFlagTest.cpp  CommandLineParserTest.cpp
Event/: CMakeLists.txt
Event/Cursor/: CMakeLists.txt
Event/Cursor/src/: CMakeLists.txt
Event/include/Event/: Data.h
Event/src/: CMakeLists.txt  Data.cpp  MouseMove.cpp
Event/test/: CMakeLists.txt  EventDataTest.cpp  FieldTest.cpp
Option/: CMakeLists.txt
Option/include/Option/: OptionBuilder.h
Option/src/: CMakeLists.txt  InvalidCommandLineOption.cpp  OptionFlag.cpp  UnsupportedOperationException.cpp
Option/test/: CMakeLists.txt  CommandLineOptionBaseTest.cpp  CommandLineOptionFlagTest.cpp  CommandLineOptionTest.cpp  CommandLineOptionValidatedTest.cpp
async/: CMakeLists.txt
async/include/async/: Scheduler.h  Util.h
async/src/: CMakeLists.txt  Scheduler.cpp
async/src/coroutine/: Interval.cpp  RepeatingTimer.cpp  Scheduler.cpp  Timer.cpp
async/src/scheduler/: Interval.cpp  Scheduler.cpp
async/test/: CMakeLists.txt
async/test/container/: LockingVector.cpp
async/test/scheduler/: Interval.cpp
checkinput/: CMakeLists.txt
checkinput/include/checkinput/: EventDevice.h  EventDeviceLister.h
checkinput/src/: CMakeLists.txt  EventDevice.cpp  EventDeviceLister.cpp
checkinput/test/: CMakeLists.txt  EventDeviceListerTest.cpp  EventDeviceTest.cpp
checkinput/test/utils/: CheckInputTestUtils.cpp  CheckInputTestUtils.h
clioption/: CMakeLists.txt
clioption/include/clioption/: AbstractOption.h  Error.h  InvalidCommandLineOption.h  Option.h  OptionBuilder.h  OptionFlag.h  OptionValidated.h  Parser.h  ParserComponent.h
clioption/src/: CMakeLists.txt  InvalidCommandLineOption.cpp  OptionFlag.cpp  Parser.cpp  ParserComponent.cpp
clioption/test/: AbstractOptionTest.cpp  CMakeLists.txt  CommandLineAbstractOptionTest.cpp  CommandLineOptionTest.cpp  CommandLineOptionValidatedTest.cpp  OptionFlagTest.cpp  OptionTest.cpp  OptionValidatedTest.cpp  ParserTest.cpp
database/: CMakeLists.txt
database/src/: CMakeLists.txt  Connection.cpp  Migrate.cpp
database/test/: CMakeLists.txt
evget/: CMakeLists.txt  README.md
evget/src/: cli.cpp  interval_tracker.cpp  main.cpp
evget/test/: cli.cpp  interval_tracker.cpp  main.cpp
evgetcore/: CMakeLists.txt
evgetcore/database/: CMakeLists.txt
evgetcore/src/: CMakeLists.txt  CoreParser.cpp  JsonStorage.cpp  Parser.cpp  PrintEvents.cpp  ShutdownHandler.cpp  UnsupportedOperationException.cpp  cli.cpp  main.cpp
evgetcore/test/: CMakeLists.txt  main.cpp
evgetlibinput/: CMakeLists.txt
evgetlibinput/src/: backend.cpp  drm.cpp  evdev.cpp  event_transformer.cpp  libinput.cpp  libinput_api.cpp  next_event.cpp  xkbcommon.cpp
evgetlibinput/test/: event_transformer.cpp  xkbcommon.cpp
evgetwindows/: CMakeLists.txt  README.md
evgetwindows/src/: backend.cpp  compiler_support.cpp
evgetwindows/test/: compiler_support.cpp
evgetx11/: CMakeLists.txt  README.md
evgetx11/src/: CMakeLists.txt  CoreXEventSwitch.cpp  EventLoopX11.cpp  EventTransformerLinux.cpp  EventTransformerX11.cpp  ParserLinux.cpp  ShutdownHandlerLinux.cpp  TouchXEventSwitch.cpp  XDeviceDeleter.cpp  XDeviceRefresh.cpp  XEventCookieDeleter.cpp  XEventSwitch.cpp  XEventSwitchBarrier.cpp  XEventSwitchCore.cpp  XEventSwitchPointer.cpp  XEventSwitchPointerKey.cpp  XEventSwitchTouch.cpp  XInputEvent.cpp  XInputHandler.cpp  XSetMaskBarrier.cpp  XSetMaskCore.cpp  XSetMaskRefresh.cpp  XSetMaskTouch.cpp  XWrapper.cpp  XWrapperX11.cpp  backend.cpp  event_handler.cpp  event_loop.cpp  event_switch.cpp  event_switch_pointer_key.cpp  event_switch_touch.cpp  event_transformer.cpp  input_event.cpp  input_handler.cpp  x11.cpp  x11_api.cpp
evgetx11/test/: CMakeLists.txt  CommandLineParserLinuxTest.cpp  EventTransformerX11Test.cpp  MockObjects.h  ShutdownHandlerLinuxTest.cpp  XEventSwitchCoreTest.cpp  XEventSwitchPointerKeyTest.cpp  XEventSwitchPointerTest.cpp  XEventSwitchTest.cpp  XEventSwitchTouchTest.cpp  XInputHandlerTest.cpp  XWrapperMock.cpp  XWrapperMock.h  event_switch.cpp  event_switch_pointer_key.cpp  event_switch_touch.cpp  event_transformer.cpp
evwatch/: CMakeLists.txt
evwatch/src/: CMakeLists.txt  EventWatcher.cpp  EventWatcherException.cpp
evwatchsig/: CMakeLists.txt
evwatchsig/src/: CMakeLists.txt  EventWatcherSignal.cpp
evwatchsig/test/: CMakeLists.txt  EventWatcherSignal.cpp  EventWatcherSignalTest.cpp
listinputdevices/: CMakeLists.txt
listinputdevices/src/: CMakeLists.txt  InputDevice.cpp  InputDeviceLister.cpp
listinputdevices/test/: CMakeLists.txt  EventDeviceListerTest.cpp  EventDeviceTest.cpp  InputDeviceListerTest.cpp  InputDeviceTest.cpp
platform/linux/: CMakeLists.txt
test/: CMakeLists.txt  CommandLineOptionBuilderTest.cpp  CommandLineOptionTest.cpp  CommandLineParserTest.cpp  CommandLineTest.cpp  EventDataEntryTest.cpp  EventDataTest.cpp
test/CommandLine/: CMakeLists.txt  CommandLineAbstractOptionTest.cpp  CommandLineOptionBaseTest.cpp  CommandLineOptionBuilderTest.cpp  CommandLineOptionFlagTest.cpp  CommandLineOptionTest.cpp  CommandLineOptionValidatedTest.cpp  CommandLineOptionValidatorTest.cpp  CommandLineParserTest.cpp  CommandLineTest.cpp
test/Event/: CMakeLists.txt  DataTest.cpp  EventDataTest.cpp  FieldTest.cpp  KeyTest.cpp  MouseClickTest.cpp  MouseMoveTest.cpp  MouseWheelTest.cpp  TableDataTest.cpp  TouchTest.cpp
test/EventData/: EventDataTest.cpp  FieldTest.cpp
test/TestUtilities/: CMakeLists.txt
test/TestUtils/: CMakeLists.txt
test/event_data/: EventDataTest.cpp  FieldTest.cpp
test/linux/: CommandLineLinuxTest.cpp  EventDeviceListerTest.cpp  EventDeviceTest.cpp  ShutdownHandlerLinuxTest.cpp
util/: CMakeLists.txt
(+831 files in other folders)
